--- a/stations.html
+++ b/stations.html
@@ -1,1 +1,105 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Sukkur Division – Stations</title>
+
+<style>
+body {
+  font-family: Arial;
+  margin: 0;
+  background: #f5f5f5;
+}
+header {
+  background: #2e7d32;
+  color: white;
+  padding: 15px;
+  text-align: center;
+  font-size: 22px;
+}
+nav {
+  background: #0d1b4c;
+  padding: 10px;
+  text-align: center;
+}
+nav a {
+  color: white;
+  margin: 0 10px;
+  text-decoration: none;
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+  background: white;
+}
+th, td {
+  border: 1px solid #ccc;
+  padding: 10px;
+  text-align: center;
+}
+th {
+  background: #e8f5e9;
+}
+button {
+  padding: 6px 10px;
+  cursor: pointer;
+}
+</style>
+</head>
+
+<body>
+
+<header>Pakistan Railways – Sukkur Division (Stations)</header>
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="stations.html">Stations</a>
+  <a href="complaint.html">Register Complaint</a>
+</nav>
+
+<main style="padding:20px;">
+<h3>Stations Information</h3>
+
+<table id="stationsTable">
+  <thead>
+    <tr>
+      <th>SNO</th>
+      <th>Station</th>
+      <th>Contact</th>
+      <th>Google Map</th>
+      <th>Pics</th>
+    </tr>
+  </thead>
+  <tbody></tbody>
+</table>
+</main>
+
+<script>
+const API_URL = "https://script.google.com/macros/s/XXXXX/exec?action=stations";
+
+fetch(API_URL)
+  .then(res => res.json())
+  .then(data => {
+    const tbody = document.querySelector("#stationsTable tbody");
+    tbody.innerHTML = "";
+
+    data.forEach(row => {
+      tbody.innerHTML += `
+        <tr>
+          <td>${row.sno}</td>
+          <td>${row.station}</td>
+          <td>${row.contact}</td>
+          <td><a href="${row.map}" target="_blank">📍 Map</a></td>
+          <td><a href="${row.pics}" target="_blank">🖼 View</a></td>
+        </tr>`;
+    });
+  })
+  .catch(err => {
+    console.error(err);
+    alert("Failed to load stations data");
+  });
+</script>
+
+</body>
+</html>
 
