--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <nav id="menu">
   <button onclick="toggleMenu()">☰ Menu</button>
   <a href="?page=home">Home</a>
-  <a href="https://script.google.com/macros/s/AKfycbyyxsVOMzik31Kp332zNELFx10ONjW9c2VuTSYni7JbViSruXss5nP5c4fYluOFesGF/exec?page=stations" target="_blank">Stations</a>
+  <a href="stations.html">Stations</a>
   <a href="?page=train_timing">Train Timing</a>
   <a href="?page=departments">Departments</a>
   <a href="?page=complaint">Register Complaint</a>
