--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <a href="stations.html">Stations</a>
   <a href="?page=train_timing">Train Timing</a>
   <a href="?page=departments">Departments</a>
-  <a href="?page=complaint">Register Complaint</a>
+  <a href="?page=complaint.html">Register Complaint</a>
 </nav>
 
 <main>
