--- a/complaint.html
+++ b/complaint.html
@@ -47,7 +47,7 @@ button:hover { opacity:0.9; }
 </main>
 
 <script>
-const API_URL = "PASTE_YOUR_APPS_SCRIPT_WEB_APP_URL";
+const API_URL = "https://script.google.com/macros/s/AKfycbx7RGtF_axaEgzPI3EO96IbbEF6Z5zcs4BtFRr80KUyayDujiyBBqiuZjkTmQEPqqx1/exec";
 
 document.getElementById("complaintForm").addEventListener("submit", async function(e) {
   e.preventDefault();
