--- a/complaint.html
+++ b/complaint.html
@@ -77,20 +77,22 @@ document.getElementById("complaintForm").addEventListener("submit", async functi
     ...imagePayload
   };
 
-  // 🔴 IMPORTANT PART
-  fetch(API_URL, {
-    method: "POST",
-    mode: "no-cors",          // ✅ REQUIRED
-    headers: {
-      "Content-Type": "application/json"
-    },
-    body: JSON.stringify(payload)
-  });
+const res = await fetch(API_URL, {
+  method: "POST",
+  headers: {
+    "Content-Type": "application/json"
+  },
+  body: JSON.stringify(payload)
+});
 
-  // ✅ Do NOT wait for response
+const result = await res.json();
+
+if (result.status === "success") {
   status.innerText = "✅ Complaint submitted successfully";
   document.getElementById("complaintForm").reset();
-});
+} else {
+  status.innerText = "❌ Error: " + result.message;
+}
 
 function toBase64(file) {
   return new Promise((resolve, reject) => {
