--- a/complaint.html
+++ b/complaint.html
@@ -55,45 +55,51 @@ document.getElementById("complaintForm").addEventListener("submit", async functi
   const status = document.getElementById("status");
   status.innerText = "Submitting complaint...";
 
-  const fileInput = document.getElementById("image");
-  let imagePayload = {};
+  try {
+    const fileInput = document.getElementById("image");
+    let imagePayload = {};
 
-  if (fileInput.files.length > 0) {
-    const file = fileInput.files[0];
-    const base64 = await toBase64(file);
+    if (fileInput.files.length > 0) {
+      const file = fileInput.files[0];
+      const base64 = await toBase64(file);
 
-    imagePayload = {
-      image: base64.split(",")[1],
-      imageName: file.name,
-      imageType: file.type
+      imagePayload = {
+        image: base64.split(",")[1],
+        imageName: file.name,
+        imageType: file.type
+      };
+    }
+
+    const payload = {
+      name: document.getElementById("name").value,
+      contact: document.getElementById("contact").value,
+      type: document.getElementById("type").value,
+      message: document.getElementById("message").value,
+      ...imagePayload
     };
+
+    const res = await fetch(API_URL, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify(payload)
+    });
+
+    const result = await res.json();
+
+    if (result.status === "success") {
+      status.innerText = "✅ Complaint submitted successfully";
+      document.getElementById("complaintForm").reset();
+    } else {
+      status.innerText = "❌ Error: " + result.message;
+    }
+
+  } catch (err) {
+    console.error(err);
+    status.innerText = "❌ Network or script error";
   }
-
-  const payload = {
-    name: document.getElementById("name").value,
-    contact: document.getElementById("contact").value,
-    type: document.getElementById("type").value,
-    message: document.getElementById("message").value,
-    ...imagePayload
-  };
-
-const res = await fetch(API_URL, {
-  method: "POST",
-  headers: {
-    "Content-Type": "application/json"
-  },
-  body: JSON.stringify(payload)
 });
 
-const result = await res.json();
-
-if (result.status === "success") {
-  status.innerText = "✅ Complaint submitted successfully";
-  document.getElementById("complaintForm").reset();
-} else {
-  status.innerText = "❌ Error: " + result.message;
-}
-
+/* ✅ MUST be outside the submit handler */
 function toBase64(file) {
   return new Promise((resolve, reject) => {
     const reader = new FileReader();
@@ -103,5 +109,6 @@ function toBase64(file) {
   });
 }
 </script>
+
 </body>
 </html>
