--- a/complaint.html
+++ b/complaint.html
@@ -3,7 +3,6 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Register Complaint</title>
-
 <style>
 body { font-family: Arial; background:#f5f5f5; margin:0; }
 header { background:#2e7d32; color:white; padding:15px; text-align:center; }
@@ -24,11 +23,10 @@ button:hover { opacity:0.9; }
 
 <main>
 <form id="complaintForm">
-  
-  <input type="text" id="name" placeholder="Complainant Name" required>
-  <input type="text" id="contact" placeholder="Contact Number" required>
+  <input type="text" name="name" placeholder="Complainant Name" required>
+  <input type="text" name="contact" placeholder="Contact Number" required>
 
-  <select id="type" required>
+  <select name="type" required>
     <option value="">Select Complaint Type</option>
     <option>Station Facilities</option>
     <option>Train Delay</option>
@@ -37,9 +35,9 @@ button:hover { opacity:0.9; }
     <option>Other</option>
   </select>
 
-  <textarea id="message" placeholder="Complaint Details" rows="4" required></textarea>
+  <textarea name="message" placeholder="Complaint Details" rows="4" required></textarea>
 
-  <input type="file" id="image" accept="image/*">
+  <input type="file" name="image" accept="image/*">
 
   <button type="submit">Submit Complaint</button>
 </form>
@@ -48,7 +46,7 @@ button:hover { opacity:0.9; }
 </main>
 
 <script>
-const API_URL = "https://script.google.com/macros/s/AKfycbya7KRQupcY_anV146gjtN0EeH6hQakjh20emQsgJqY0seA8MRV0vqst3zyE4zL2t6b/exec";
+const API_URL = "YOUR_WEB_APP_URL_HERE"; // replace with your deployed web app URL
 
 document.getElementById("complaintForm").addEventListener("submit", async function(e) {
   e.preventDefault();
@@ -56,49 +54,29 @@ document.getElementById("complaintForm").addEventListener("submit", async functi
   const status = document.getElementById("status");
   status.innerText = "Submitting complaint...";
 
-  const fileInput = document.getElementById("image");
-  let imagePayload = {};
+  const form = e.target;
+  const formData = new FormData(form);
 
-  if (fileInput.files.length > 0) {
-    const file = fileInput.files[0];
-    const base64 = await toBase64(file);
+  try {
+    const res = await fetch(API_URL, {
+      method: "POST",
+      body: formData
+    });
 
-    imagePayload = {
-      image: base64.split(",")[1],
-      imageName: file.name,
-      imageType: file.type
-    };
+    const result = await res.json();
+
+    if (result.status === "success") {
+      status.innerText = "✅ Complaint submitted successfully";
+      form.reset();
+    } else {
+      status.innerText = "❌ Error: " + result.message;
+    }
+
+  } catch (err) {
+    status.innerText = "❌ Network or script error";
+    console.error(err);
   }
-
-  const payload = {
-    name: document.getElementById("name").value,
-    contact: document.getElementById("contact").value,
-    type: document.getElementById("type").value,
-    message: document.getElementById("message").value,
-    ...imagePayload
-  };
-
-  /* 🔴 CRITICAL FIX */
-  fetch(API_URL, {
-    method: "POST",
-    mode: "no-cors",   // ✅ REQUIRED
-    body: JSON.stringify(payload)
-  });
-
-  // ✅ Assume success (GAS does not allow response reading)
-  status.innerText = "✅ Complaint submitted successfully";
-  document.getElementById("complaintForm").reset();
 });
-
-function toBase64(file) {
-  return new Promise((resolve, reject) => {
-    const reader = new FileReader();
-    reader.onload = () => resolve(reader.result);
-    reader.onerror = reject;
-    reader.readAsDataURL(file);
-  });
-}
 </script>
-
 </body>
 </html>
