--- a/complaint.html
+++ b/complaint.html
@@ -1,5 +1,52 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Register Complaint</title>
+<style>
+body { font-family: Arial; background:#f5f5f5; margin:0; }
+header { background:#2e7d32; color:white; padding:15px; text-align:center; }
+main { padding:20px; max-width:600px; margin:auto; background:white; }
+input, select, textarea, button {
+  width:100%; padding:10px; margin:8px 0;
+}
+button {
+  background:#2e7d32; color:white; border:none; cursor:pointer;
+}
+button:hover { opacity:0.9; }
+</style>
+</head>
+
+<body>
+
+<header>Register Complaint – Pakistan Railways (Sukkur Division)</header>
+
+<main>
+<form id="complaintForm">
+  <input type="text" name="name" placeholder="Complainant Name" required>
+  <input type="text" name="contact" placeholder="Contact Number" required>
+
+  <select name="type" required>
+    <option value="">Select Complaint Type</option>
+    <option>Station Facilities</option>
+    <option>Train Delay</option>
+    <option>Staff Behaviour</option>
+    <option>Cleanliness</option>
+    <option>Other</option>
+  </select>
+
+  <textarea name="message" placeholder="Complaint Details" rows="4" required></textarea>
+
+  <input type="file" name="image" accept="image/*">
+
+  <button type="submit">Submit Complaint</button>
+</form>
+
+<p id="status"></p>
+</main>
+
 <script>
-const API_URL = "https://script.google.com/macros/s/AKfycbya7KRQupcY_anV146gjtN0EeH6hQakjh20emQsgJqY0seA8MRV0vqst3zyE4zL2t6b/exec";
+const API_URL = "YOUR_WEB_APP_URL_HERE";
 
 document.getElementById("complaintForm").addEventListener("submit", async function(e) {
   e.preventDefault();
@@ -59,3 +106,5 @@ function toBase64(file) {
   });
 }
 </script>
+</body>
+</html>
