--- a/complaint.html
+++ b/complaint.html
@@ -46,7 +46,7 @@ button:hover { opacity:0.9; }
 </main>
 
 <script>
-const API_URL = "YOUR_WEB_APP_URL_HERE";
+const API_URL = "https://script.google.com/macros/s/AKfycbya7KRQupcY_anV146gjtN0EeH6hQakjh20emQsgJqY0seA8MRV0vqst3zyE4zL2t6b/exec";
 
 document.getElementById("complaintForm").addEventListener("submit", async function(e) {
   e.preventDefault();
