--- a/complaint.html
+++ b/complaint.html
@@ -37,7 +37,17 @@ button:hover { opacity:0.9; }
 
   <textarea name="message" placeholder="Complaint Details" rows="4" required></textarea>
 
-  <input type="file" name="image" accept="image/*">
+<input type="file" name="image" accept="image/*" onchange="checkSize(this)">
+<script>
+function checkSize(input) {
+  const file = input.files[0];
+  if (file && file.size > 500000) { // 500 KB
+    alert("Image too large! Maximum allowed is 500 KB.");
+    input.value = "";
+  }
+}
+</script>
+
 
   <button type="submit">Submit Complaint</button>
 </form>
