--- a/complaint.html
+++ b/complaint.html
@@ -26,7 +26,7 @@ button:hover { opacity:0.9; }
   <select id="type" required>
     <option value="">Select Complaint Type</option>
     <option>Station Facilities</option>
-    <option>Train Delay</option>
+    <option>Train Cleaness</option>
     <option>Staff Behaviour</option>
     <option>Cleanliness</option>
     <option>Other</option>
