--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <button onclick="toggleMenu()">☰ Menu</button>
   <a href="?page=home">Home</a>
   <a href="stations.html">Stations</a>
-  <a href="?page=train_timing">Train Timing</a>
+  <a href="timing.html">Train Timing</a>
   <a href="?page=departments">Departments</a>
   <a href="complaint.html">Register Complaint</a>
 </nav>
