--- a/stations.html
+++ b/stations.html
@@ -65,7 +65,7 @@ button {
     <tr>
       <th>SNO</th>
       <th>Station</th>
-      <th>Contact</th>
+      <th>Facilities</th>
        <th>Pics</th>
       <th>Google Map</th>
      
@@ -89,7 +89,7 @@ fetch(API_URL)
         <tr>
           <td>${row.sno}</td>
           <td>${row.station}</td>
-          <td>${row.contact}</td>
+          <td>${row.facilities}</td>
            <td><a href="${row.pics}" target="_blank">🖼 View</a></td>
           <td><a href="${row.map}" target="_blank">📍 Map</a></td>
          
