--- a/timing.html
+++ b/timing.html
@@ -79,7 +79,7 @@ th {
 </table>
 
 <script>
-const API = "YOUR_WEB_APP_URL_HERE";
+const API = "https://script.google.com/macros/s/AKfycbya7KRQupcY_anV146gjtN0EeH6hQakjh20emQsgJqY0seA8MRV0vqst3zyE4zL2t6b/exec?action=timing";
 
 /* 🔹 Load dropdown */
 fetch(API + "?action=trains")
