--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   <a href="?page=home">Home</a>
   <a href="stations.html">Stations</a>
   <a href="timing.html">Train Timing</a>
-  <a href="?page=departments">Departments</a>
+  <a href="?page=departments">Ticketing</a>
   <a href="complaint.html">Register Complaint</a>
 </nav>
 
