--- a/timing.html
+++ b/timing.html
@@ -108,7 +108,7 @@ th {
 <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
 
 <script>
-const API = "YOUR_WEB_APP_URL_HERE"; // Replace with your GAS web app URL
+const API = "https://script.google.com/macros/s/AKfycbya7KRQupcY_anV146gjtN0EeH6hQakjh20emQsgJqY0seA8MRV0vqst3zyE4zL2t6b/exec"; // Replace with your GAS web app URL
 const sel = document.getElementById("trainSelect");
 
 // 🔹 Load dropdown
