--- a/ticketing.html
+++ b/ticketing.html
@@ -78,7 +78,7 @@
     <div class="image-caption">
       Muhammad Ibrahim Balouch<br>
       Divisional Commercial Officer<br>
-      Sukkur Division
+      Pakistan Railways, Sukkur Division
     </div>
   </div>
 
