--- a/ticketing.html
+++ b/ticketing.html
@@ -74,7 +74,7 @@
 
 <div class="container">
   <div class="image-section">
-    <img src="your-image-path.jpg" alt="Ticketing Services">
+    <img src="https://drive.google.com/file/d/1aJcf0ApyrGA72EFnl1SzHmeq49KT_igf/view?usp=sharing" alt="DCO Sukkur">
     <div class="image-caption">
       Muhammad Ibrahim Balouch<br>
       Divisional Commercial Officer<br>
