--- a/ticketing.html
+++ b/ticketing.html
@@ -71,6 +71,14 @@
 <body>
 
 <header>Ticketing Services – Sukkur Division</header>
+<nav id="menu">
+  <button onclick="toggleMenu()">☰ Menu</button>
+  <a href="?page=home">Home</a>
+  <a href="stations.html">Stations</a>
+  <a href="timing.html">Train Timing</a>
+  <a href="ticketing.html">Ticketing</a>
+  <a href="complaint.html">Register Complaint</a>
+</nav>
 
 <div class="container">
   <div class="image-section">
