--- a/ticketing.html
+++ b/ticketing.html
@@ -19,6 +19,36 @@
     text-align: center;
     font-size: 22px;
   }
+/* ================= NAVIGATION ================= */
+    nav {
+      background-color: rgba(0, 0, 50, 0.9);
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    nav a {
+      color: white;
+      padding: 12px 20px;
+      text-decoration: none;
+      font-size: 16px;
+      text-align: center;
+      transition: background 0.3s;
+    }
+
+    nav a:hover {
+      background-color: #1a237e;
+    }
+
+    nav button {
+      display: none;
+      background: none;
+      border: none;
+      color: white;
+      font-size: 28px;
+      cursor: pointer;
+      margin-left: 10px;
+    }
 
   .container {
     display: flex;
