--- a/ticketing.html
+++ b/ticketing.html
@@ -112,7 +112,7 @@
 
 <div class="container">
   <div class="image-section">
-    <img src="https://drive.google.com/file/d/1aJcf0ApyrGA72EFnl1SzHmeq49KT_igf/view?usp=sharing" alt="DCO Sukkur">
+    <img src="https://drive.google.com/file/d/1aJcf0ApyrGA72EFnl1SzHmeq49KT_igf">
     <div class="image-caption">
       Muhammad Ibrahim Balouch<br>
       Divisional Commercial Officer<br>
