--- a/ticketing.html
+++ b/ticketing.html
@@ -112,7 +112,7 @@
 
 <div class="container">
   <div class="image-section">
-    <img src="https://drive.google.com/drive/u/3/folders/1iT0rcpO41Jz5upUmTuyH4cWEqtTmX1J9">
+    <img src="https://drive.google.com/uc?export=view&id=1aJcf0ApyrGA72EFnl1SzHmeq49KT_igf">
     <div class="image-caption">
       Muhammad Ibrahim Balouch<br>
       Divisional Commercial Officer<br>
