--- a/ticketing.html
+++ b/ticketing.html
@@ -112,7 +112,7 @@
 
 <div class="container">
   <div class="image-section">
-    <img src="https://drive.google.com/uc?export=view&id=1aJcf0ApyrGA72EFnl1SzHmeq49KT_igf">
+    <img src="https://drive.usercontent.google.com/download?id=1aJcf0ApyrGA72EFnl1SzHmeq49KT_igf&export=view&authuser=0">
     <div class="image-caption">
       Muhammad Ibrahim Balouch<br>
       Divisional Commercial Officer<br>
