--- a/ticketing.html
+++ b/ticketing.html
@@ -103,7 +103,7 @@
 <header>Ticketing Services – Sukkur Division</header>
 <nav id="menu">
   <button onclick="toggleMenu()">☰ Menu</button>
-  <a href="?page=home">Home</a>
+  <a href="index.html">Home</a>
   <a href="stations.html">Stations</a>
   <a href="timing.html">Train Timing</a>
   <a href="ticketing.html">Ticketing</a>
