--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 <nav id="menu">
   <button onclick="toggleMenu()">☰ Menu</button>
-  <a href="?page=home">Home</a>
+  <a href="index.html">Home</a>
   <a href="stations.html">Stations</a>
   <a href="timing.html">Train Timing</a>
   <a href="ticketing.html">Ticketing</a>
