--- a/stations.html
+++ b/stations.html
@@ -51,11 +51,15 @@ button {
 
 <header>Pakistan Railways – Sukkur Division (Stations)</header>
 
-<nav>
+<nav id="menu">
+  <button onclick="toggleMenu()">☰ Menu</button>
   <a href="index.html">Home</a>
   <a href="stations.html">Stations</a>
+  <a href="timing.html">Train Timing</a>
+  <a href="ticketing.html">Ticketing</a>
   <a href="complaint.html">Register Complaint</a>
 </nav>
+
 
 <main style="padding:20px;">
 <h3>Stations Information</h3>
