--- a/stations.html
+++ b/stations.html
@@ -44,6 +44,36 @@ button {
   padding: 6px 10px;
   cursor: pointer;
 }
+     /* ================= NAVIGATION ================= */
+    nav {
+      background-color: rgba(0, 0, 50, 0.9);
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    nav a {
+      color: white;
+      padding: 12px 20px;
+      text-decoration: none;
+      font-size: 16px;
+      text-align: center;
+      transition: background 0.3s;
+    }
+
+    nav a:hover {
+      background-color: #1a237e;
+    }
+
+    nav button {
+      display: none;
+      background: none;
+      border: none;
+      color: white;
+      font-size: 28px;
+      cursor: pointer;
+      margin-left: 10px;
+    }
 </style>
 </head>
 
