--- a/ticketing.html
+++ b/ticketing.html
@@ -112,7 +112,7 @@
 
 <div class="container">
   <div class="image-section">
-    <img src="<img src="https://drive.google.com/thumbnail?id=1aJcf0ApyrGA72EFnl1SzHmeq49KT_igf&sz=w400" alt="Muhammad Ibrahim Balouch">
+    <img src="https://drive.google.com/thumbnail?id=1aJcf0ApyrGA72EFnl1SzHmeq49KT_igf&sz=w400" alt="Muhammad Ibrahim Balouch">
     <div class="image-caption">
       Muhammad Ibrahim Balouch<br>
       Divisional Commercial Officer<br>
