--- a/timing.html
+++ b/timing.html
@@ -128,6 +128,14 @@ th {
 <body>
 
 <header>Train Timing</header>
+<nav id="menu">
+  <button onclick="toggleMenu()">☰ Menu</button>
+  <a href="index.html">Home</a>
+  <a href="stations.html">Stations</a>
+  <a href="timing.html">Train Timing</a>
+  <a href="ticketing.html">Ticketing</a>
+  <a href="complaint.html">Register Complaint</a>
+</nav>
 
 <div class="panel">
   <div class="dropdown-container">
