--- a/index.html
+++ b/index.html
@@ -122,8 +122,18 @@
 
 <body>
 
-<header>
-  Pakistan Railways – Sukkur Division
+<header class="main-header">
+  <div class="header-left">
+    <img src="https://drive.google.com/thumbnail?id=1WptR4123r4Le2CahaXv9khTtmptZvHOn=w80" alt="Pakistan Railways Logo">
+  </div>
+
+  <div class="header-center">
+    Pakistan Railways – Sukkur Division
+  </div>
+
+  <div class="header-right">
+    <img src="https://drive.google.com/thumbnail?id=1WptR4123r4Le2CahaXv9khTtmptZvHOn=w80" alt="Division Logo">
+  </div>
 </header>
 
 <nav id="menu">
