--- a/index.html
+++ b/index.html
@@ -139,6 +139,17 @@
         display: block;
       }
     }
+    @media (max-width: 600px) {
+  .header-left img,
+  .header-right img {
+    height: 40px;
+  }
+
+  .header-center {
+    font-size: 18px;
+  }
+}
+
   </style>
 </head>
 
