--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 <header class="main-header">
   <div class="header-left">
-    <img src="https://drive.google.com/thumbnail?id=1WptR4123r4Le2CahaXv9khTtmptZvHOn=w80" alt="Pakistan Railways Logo">
+    <img src="https://drive.google.com/thumbnail?id=1WptR4123r4Le2CahaXv9khTtmptZvHOn&sz=w80" alt="Pakistan Railways Logo">
   </div>
 
   <div class="header-center">
@@ -165,7 +165,7 @@
   </div>
 
   <div class="header-right">
-    <img src="https://drive.google.com/thumbnail?id=1WptR4123r4Le2CahaXv9khTtmptZvHOn=w80" alt="Division Logo">
+    <img src="https://drive.google.com/thumbnail?id=1WptR4123r4Le2CahaXv9khTtmptZvHOn&sz=w80" alt="Division Logo">
   </div>
 </header>
 
