--- a/stations.html
+++ b/stations.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Sukkur Division – Stations</title>
+<title>Pakistan Railways Sukkur Division – Stations</title>
 
 <style>
 body {
