--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
       alt="Divisional Superintendent"
     >
     <div class="ds-name">
-      <strong>Jamshaid Alam</strong><br>
+      <color=green>
+      <strong>Jamshaid Alam</strong><br></color>
       Divisional Superintendent<br>
       Pakistan Railways, Sukkur Division
     </div>
