--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
       alt="Divisional Superintendent"
     >
     <div class="ds-name">
-      <color=green>
-      <strong>Jamshaid Alam</strong><br></color>
+      
+      <strong><style="color:green;">Jamshaid Alam</style></strong><br>
       Divisional Superintendent<br>
       Pakistan Railways, Sukkur Division
     </div>
