--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     >
     <div class="ds-name">
       
-      <strong><style="color:green;">Jamshaid Alam</style></strong><br>
+       <strong style="color: green;">Jamshaid Alam</strong><br>
       Divisional Superintendent<br>
       Pakistan Railways, Sukkur Division
     </div>
