--- a/ticketing.html
+++ b/ticketing.html
@@ -114,7 +114,7 @@
   <div class="image-section">
     <img src="https://drive.google.com/thumbnail?id=1aJcf0ApyrGA72EFnl1SzHmeq49KT_igf&sz=w400" alt="Muhammad Ibrahim Balouch">
     <div class="image-caption">
-      Muhammad Ibrahim Balouch<br>
+     <strong style="color: blue;">Muhammad Ibrahim Balouch</strong><br>
       Divisional Commercial Officer<br>
       Pakistan Railways, Sukkur Division
     </div>
