--- a/complaint.html
+++ b/complaint.html
@@ -79,7 +79,7 @@ document.getElementById("complaintForm").addEventListener("submit", async functi
   /* 🔴 CRITICAL FIX */
   fetch(API_URL, {
     method: "POST",
-  //  mode: "no-cors",   // ✅ REQUIRED
+   mode: "no-cors",   // ✅ REQUIRED
     body: JSON.stringify(payload)
   });
 
