--- a/complaint.html
+++ b/complaint.html
@@ -75,18 +75,17 @@ document.getElementById("complaintForm").addEventListener("submit", async functi
     message: document.getElementById("message").value,
     ...imagePayload
   };
-
-  /* 🔴 CRITICAL FIX */
-  fetch(API_URL, {
-    method: "POST",
-   mode: "no-cors",   // ✅ REQUIRED
-    body: JSON.stringify(payload)
-  });
-
-  // ✅ Assume success (GAS does not allow response reading)
-  status.innerText = "✅ Complaint submitted successfully";
-  document.getElementById("complaintForm").reset();
+//fetch API URL
+ const res = await fetch(API_URL, {
+  method: "POST",
+  mode: "cors",
+  headers: { "Content-Type": "application/json" },
+  body: JSON.stringify(payload)
 });
+const result = await res.json();
+status.innerText = result.status === "success" 
+  ? "✅ Complaint submitted successfully" 
+  : "❌ Error: " + result.message;
 
 function toBase64(file) {
   return new Promise((resolve, reject) => {
