--- a/complaint.html
+++ b/complaint.html
@@ -48,45 +48,8 @@ button:hover { opacity:0.9; }
 
 <script>
 const API_URL = "https://script.google.com/macros/s/AKfycbya7KRQupcY_anV146gjtN0EeH6hQakjh20emQsgJqY0seA8MRV0vqst3zyE4zL2t6b/exec";
-document.getElementById("complaintForm").addEventListener("submit", async function(e) {
-  e.preventDefault();
 
-  const status = document.getElementById("status");
-  status.innerText = "Submitting complaint...";
-
-  const fileInput = document.getElementById("image");
-  let imagePayload = {};
-
-  if (fileInput.files.length > 0) {
-    const file = fileInput.files[0];
-    const base64 = await toBase64(file);
-
-    imagePayload = {
-      image: base64.split(",")[1],
-      imageName: file.name,
-      imageType: file.type
-    };
-  }
-
-  const payload = {
-    name: document.getElementById("name").value,
-    contact: document.getElementById("contact").value,
-    type: document.getElementById("type").value,
-    message: document.getElementById("message").value,
-    ...imagePayload
-  };
-//fetch API URL
- const res = await fetch(API_URL, {
-  method: "POST",
-  mode: "cors",
-  headers: { "Content-Type": "application/json" },
-  body: JSON.stringify(payload)
-});
-const result = await res.json();
-status.innerText = result.status === "success" 
-  ? "✅ Complaint submitted successfully" 
-  : "❌ Error: " + result.message;
-
+// Helper to convert file to Base64
 function toBase64(file) {
   return new Promise((resolve, reject) => {
     const reader = new FileReader();
@@ -95,6 +58,55 @@ function toBase64(file) {
     reader.readAsDataURL(file);
   });
 }
+
+document.getElementById("complaintForm").addEventListener("submit", async function(e) {
+  e.preventDefault();
+  const status = document.getElementById("status");
+
+  try {
+    status.innerText = "Submitting complaint...";
+
+    const fileInput = document.getElementById("image");
+    let imagePayload = {};
+
+    if (fileInput.files.length > 0) {
+      const file = fileInput.files[0];
+      const base64 = await toBase64(file);
+
+      imagePayload = {
+        image: base64.split(",")[1],
+        imageName: file.name,
+        imageType: file.type
+      };
+    }
+
+    const payload = {
+      name: document.getElementById("name").value,
+      contact: document.getElementById("contact").value,
+      type: document.getElementById("type").value,
+      message: document.getElementById("message").value,
+      ...imagePayload
+    };
+
+    const res = await fetch(API_URL, {
+      method: "POST",
+      mode: "cors",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify(payload)
+    });
+
+    const result = await res.json();
+    status.innerText = result.status === "success" 
+      ? "✅ Complaint submitted successfully" 
+      : "❌ Error: " + result.message;
+
+    if(result.status === "success") document.getElementById("complaintForm").reset();
+
+  } catch(err) {
+    console.error(err);
+    status.innerText = "❌ Submission failed: " + err.message;
+  }
+});
 </script>
 
 </body>
